2016-07-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish mingwrt-3.22.1.

	* mingw32/mingw32-runtime.xml (mingwrt-3.22.1-dev)
	(mingwrt-3.22.1-dll mingwrt-3.22.1-lic mingwrt-3.22.1-man): Add
	component package release records.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-07-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish w32api-3.18.1.

	* mingw32/mingw32-runtime.xml (w32api-3.18.1-dev): Add release record.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-07-15  Cesar Strauss  <cestrauss@gmail.com>

	Upgrade msys-core to version 1.0.19.

	* msys/msys-core.xml:  Add new release specifications.
	(msys-core) <bin>: Generate /etc/fstab automatically in postinstall.

	* common/issue.log msys/issue.log: Updated accordingly.

2016-07-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish mingwrt-3.22 and w32api-3.18.

	* mingw32/mingw32-runtime.xml (mingwrt-3.22): Add release records...
	(dev, dll, lic, man): ...for each of these component packages.
	(w32api-3.18): Likewise, for 'dev' component package only.

	* common/issue.log mingw32/issue.log: Update accordingly.

2016-03-16  Erwin Waterlander  <waterlan@xs4all.nl>

	New package msys-ncurses 6.0.

	* msys/msys-ncurses.xml: New for ncurses version 6.0.
	* msys/msys-package-list.xml: Added msys-ncurses.
	* msys/issue.log: Updated accordingly.
	* common/issue.log: Updated accordingly.

	* msys/msys-mksh.xml: Added missing file.

2016-02-22  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Reassign misplaced libmpc dependencies for GCC-4.8.1

	* mingw32/mingw32-gcc4.xml (libgcc-dll-1): Delete dependencies on...
	(libmpc-dll-2, libmpc-dll-3): ...these; reassign as appropriate, to...
	(gcc-core-4.8.1-dev): ...here.

	* common/issue.log mingw32/issue.log: Update accordingly.

2016-02-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Remove bogus GCC-4.9.3 dependencies.
