@@ -24,13 +24,17 @@
         </paragraph>
       </description>
 
-      <source tarname="pthreads-w32-%-mingw32-%-src.tar.lzma" />
-      <licence tarname="pthreads-w32-%-mingw32-%-lic.tar.lzma" />
+      <source tarname="pthreads-w32-%-mingw32-%-src.tar" />
+      <licence tarname="pthreads-w32-%-mingw32-%-lic.tar" />
 
       <component class="dev">
-	<release tarname="pthreads-w32-2.9.1-1-mingw32-dev.tar.lzma">
+        <release tarname="pthreads-w32-2.10-mingw32-pre-20160821-1-dev.tar.xz">
+          <requires eq="mingw32-libpthreadgc-%-mingw32-%-dev.tar" />
+          <download tarname="none" />
+        </release>
+        <release tarname="pthreads-w32-2.9.1-1-mingw32-dev.tar.lzma">
           <requires eq="mingw32-libpthread-%-mingw32-dll-2.tar" />
-	</release>
+        </release>
         <release tarname="pthreads-w32-2.8.0-3-mingw32-dev.tar.lzma" >
           <requires eq="mingw32-libpthread-%-mingw32-dll-2.tar" />
         </release>
@@ -40,28 +44,29 @@
       </component>
 
       <component class="doc">
-	<release tarname="pthreads-w32-2.9.1-1-mingw32-doc.tar.lzma" />
+        <release tarname="pthreads-w32-2.10-mingw32-pre-20160821-1-doc.tar.xz" />
+        <release tarname="pthreads-w32-2.9.1-1-mingw32-doc.tar.lzma" />
         <release tarname="pthreads-w32-2.8.0-3-mingw32-doc.tar.lzma" />
         <release tarname="pthreads-w32-2.9.0-mingw32-pre-20110507-2-doc.tar.lzma" />
       </component>
 
       <component class="lic">
-	<release tarname="pthreads-w32-2.9.1-1-mingw32-lic.tar.lzma" />
+        <release tarname="pthreads-w32-2.10-mingw32-pre-20160821-1-lic.tar.xz" />
+        <release tarname="pthreads-w32-2.9.1-1-mingw32-lic.tar.lzma" />
         <release tarname="pthreads-w32-2.9.0-mingw32-pre-20110507-2-lic.tar.lzma" />
         <release tarname="pthreads-w32-2.8.0-3-mingw32-lic.tar.lzma" />
       </component>
-
     </package>
 
     <package name="mingw32-libpthreadgc" alias="libpthreadgc mingw32-libpthread libpthread">
       <affiliate group="MinGW Standard Libraries" />
       <description lang="en" title="POSIX threading library for Win32" >
-	<paragraph>
-	  NOTE: The 2.9.1 release delivers this library as part of the
-	  pthreads-w32-2.9.1-1-mingw32-dll.tar.lzma file.  This DLL file is a
-	  dependency for gcc-core-4.8.1 and will be installed as such when using
-	  mingw-get.
-	</paragraph>
+        <paragraph>
+          NOTE: The 2.9.1 release delivers this library as part of the
+          pthreads-w32-2.9.1-1-mingw32-dll.tar.lzma file.  This DLL file is
+          a dependency for gcc-core-4.8.1 and will be installed as such when
+          using mingw-get.
+        </paragraph>
         <paragraph>
           pthreads-w32 seeks to provide a freely available and high-quality
           implementation of pthreads for Windows.  Pthreads is an API for
@@ -77,7 +82,7 @@
           behavior of mingw32-libpthreadgc, and NOT the behavior of the 'GCE'
           version).  We recommend that most users rely on mingw32-libpthreadgc
           ('GC') and not mingw32-libpthreadgce ('GCE').
-       </paragraph>
+        </paragraph>
         <paragraph>
           The mingw32-libpthreadgc and mingw32-libpthreadgce packages provide
           the two runtime libraries (most people need not install the 'GCE'
@@ -92,13 +97,23 @@
         </paragraph>
       </description>
 
-      <source tarname="pthreads-w32-%-mingw32-%-src.tar.lzma" />
-      <licence tarname="pthreads-w32-%-mingw32-%-lic.tar.lzma" />
+      <source tarname="pthreads-w32-%-mingw32-%-src.tar" />
+      <licence tarname="pthreads-w32-%-mingw32-%-lic.tar" />
+
+      <component class="dev">
+        <release tarname="libpthreadgc-2.10-mingw32-pre-20160821-1-dev.tar.xz">
+          <download tarname="pthreads-GC-w32-2.10-mingw32-pre-20160821-1-dev.tar.xz" />
+          <requires eq="mingw32-libpthreadgc-%-mingw32-%-dll-3.tar" />
+        </release>
+      </component>
 
       <component class="dll">
-	<release tarname="libpthread-2.9.1-1-mingw32-dll-2.tar" >
-	  <download tarname="pthreads-w32-2.9.1-1-mingw32-dll.tar.lzma" />
-	</release>
+        <release tarname="libpthreadgc-2.10-mingw32-pre-20160821-1-dll-3.tar.xz">
+          <download tarname="pthreads-GC-w32-2.10-mingw32-pre-20160821-1-dll-3.tar.xz" />
+        </release>
+        <release tarname="libpthread-2.9.1-1-mingw32-dll-2.tar" >
+          <download tarname="pthreads-w32-2.9.1-1-mingw32-dll.tar.lzma" />
+        </release>
         <release tarname="libpthread-2.8.0-3-mingw32-dll-2.tar.lzma" />
         <release tarname="libpthreadgc-2.9.0-mingw32-pre-20110507-2-dll-2.tar.lzma" />
       </component>
@@ -107,12 +122,12 @@
     <package name="mingw32-libpthreadgce" alias="libpthreadgce" >
       <affiliate group="MinGW Standard Libraries" />
       <description lang="en" title="POSIX threading library for Win32" >
-	<paragraph>
-	  NOTE: The 2.9.1 release delivers this library as part of the
-	  pthreads-w32-2.9.1-1-mingw32-dll.tar.lzma file.  This DLL file is a
-	  dependency for gcc-core-4.8.1 and will be installed as such when using
-	  mingw-get.
-	</paragraph>
+        <paragraph>
+          NOTE: The 2.9.1 release delivers this library as part of the
+          pthreads-w32-2.9.1-1-mingw32-dll.tar.lzma file.  This DLL file is
+          a dependency for gcc-core-4.8.1 and will be installed as such when
+          using mingw-get.
+        </paragraph>
         <paragraph>
           pthreads-w32 seeks to provide a freely available and high-quality
           implementation of pthreads for Windows.  Pthreads is an API for
@@ -129,7 +144,7 @@
           and NOT the behavior of the 'GCE' version).  We recommend that most
           users rely on mingw32-libpthreadgc ('GC') and not
           mingw32-libpthreadgce ('GCE').
-       </paragraph>
+        </paragraph>
         <paragraph>
           The mingw32-libpthreadgc and mingw32-libpthreadgce packages provide
           the two runtime libraries (most people need not install the 'GCE'
@@ -140,14 +155,25 @@
         </paragraph>
       </description>
 
-      <source tarname="pthreads-w32-%-mingw32-%-src.tar.lzma" />
-      <licence tarname="pthreads-w32-%-mingw32-%-lic.tar.lzma" />
+      <source tarname="pthreads-w32-%-mingw32-%-src.tar" />
+      <licence tarname="pthreads-w32-%-mingw32-%-lic.tar" />
+
+      <component class="dev">
+        <release tarname="libpthreadgce-2.10-mingw32-pre-20160821-1-dev.tar.xz">
+          <download tarname="pthreads-GCE-w32-2.10-mingw32-pre-20160821-1-dev.tar.xz" />
+          <requires eq="mingw32-libpthreadgce-%-mingw32-%-dll-3.tar" />
+          <requires eq="mingw32-libpthreadgc-%-mingw32-%-dev.tar" />
+        </release>
+      </component>
 
       <component class="dll">
-	<release tarname="libpthreadgce-2.9.1-1-mingw32-dll-2.tar" >
-	  <download tarname="none" />
-	  <requires eq="mingw32-libpthread-2.9.1-1-mingw32-dll-2.tar" />
-	</release>
+        <release tarname="libpthreadgce-2.10-mingw32-pre-20160821-1-dll-3.tar.xz">
+          <download tarname="pthreads-GCE-w32-2.10-mingw32-pre-20160821-1-dll-3.tar.xz" />
+        </release>
+        <release tarname="libpthreadgce-2.9.1-1-mingw32-dll-2.tar" >
+          <download tarname="none" />
+          <requires eq="mingw32-libpthread-2.9.1-1-mingw32-dll-2.tar" />
+        </release>
         <release tarname="libpthreadgce-2.9.0-mingw32-pre-20110507-2-dll-2.tar.lzma" />
       </component>
     </package>
@@ -155,11 +181,11 @@
     <package name="mingw32-libquserex" alias="libquserex" >
       <affiliate group="MinGW Standard Libraries" />
       <description lang="en" title="POSIX threading library for Win32" >
-	<paragraph>
-	  NOTE: The 2.9.1 release does not deliver this library.  This decision
-	  was based on the number of downloads for the library and the fact that
-	  it is experimental.
-	</paragraph>
+        <paragraph>
+          NOTE: The 2.9.1 and later releases do not deliver this library.
+          This decision was based on the number of downloads for the library
+          and the fact that it is experimental.
+        </paragraph>
         <paragraph>
           pthreads-w32 seeks to provide a freely available and high-quality
           implementation of pthreads for Windows.  Pthreads is an API for
@@ -196,8 +222,8 @@
         </paragraph>
       </description>
 
-      <source tarname="pthreads-w32-%-mingw32-%-src.tar.lzma" />
-      <licence tarname="pthreads-w32-%-mingw32-%-lic.tar.lzma" />
+      <source tarname="pthreads-w32-%-mingw32-%-src.tar" />
+      <licence tarname="pthreads-w32-%-mingw32-%-lic.tar" />
 
       <component class="dll">
         <release tarname="libquserex-2.9.0-mingw32-pre-20110507-2-dll.tar.lzma" />
@@ -225,8 +251,8 @@
         </paragraph>
       </description>
 
-      <source tarname="pthreads-w32-%-mingw32-src.tar.lzma" />
-      <licence tarname="pthreads-w32-%-mingw32-lic.tar.lzma" />
+      <source tarname="pthreads-w32-%-mingw32-src.tar" />
+      <licence tarname="pthreads-w32-%-mingw32-lic.tar" />
 
       <component class="dll">
         <release tarname="libpthread-2.8.0-3-mingw32-dll-2.tar.lzma" />
