@@ -1,9 +1,20 @@
+2016-08-22  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Publish pthreads-win32-2.10-mingw32-pre-20160821-1.
+
+	* mingw32/mingw32-pthreads-w32.xml (pthreads-w32-2.10-dev): Add
+	component package release record; it is specified as a meta-component.
+	(pthreads-w32-2.10-doc, pthreads-w32-2.10-lic, libpthreadgc-2.10-dll-3)
+	(libpthreadgce-2.10-dll-3): Add component package release records.
+	(libpthreadgc-2.10-dev, libpthreadgce-2.10-dev): New components.
+	* common/issue.log mingw32/issue.log: Update accordingly.
+
 2016-07-31  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Publish mingwrt-3.22.1.
 
 	* mingw32/mingw32-runtime.xml (mingwrt-3.22.1-dev)
-	(mingwrt-3.22.1-dll mingwrt-3.22.1-lic mingwrt-3.22.1-man): Add
+	(mingwrt-3.22.1-dll, mingwrt-3.22.1-lic, mingwrt-3.22.1-man): Add
 	component package release records.
 	* common/issue.log mingw32/issue.log: Update accordingly.
 
